--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
 { question: "Quem escreveu 'Dom Casmurro'?", options: ["Machado de Assis", "José de Alencar", "Manuel Bandeira", "Gregório de Matos"], answer: "Machado de Assis" },
 { question: "Quantos oceanos existem na Terra?", options: ["3", "4", "5", "6"], answer: "5" },
 { question: "O que é a litosfera?", options: ["Parte líquida da Terra", "Atmosfera superior", "Camada sólida superficial da Terra", "Centro do planeta"], answer: "Camada sólida superficial da Terra" },
+{ question: "Quem é conhecido como o Rei do Pop?", options: ["Elvis Presley", "Prince", "Freddie Mercury", "Michael Jackson"], answer: "Michael Jackson" },
 { question: "Quem é conhecido como o Rei do Pop?", options: ["Elvis Presley", "Prince", "Freddie Mercury", "Michael Jackson"], answer: "Michael Jackson" }
 
 
