--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
     <div class="question-area">
       <div class="question-text" id="questionText">Clique em iniciar para começar.</div>
+      <div id="contador" style="font-weight: bold; margin-top: 10px;"></div>
       <div class="options" id="optionsBox"></div>
       <div class="next-button" id="nextButtonArea">
         <button onclick="nextQuestion()">Próxima</button>
