--- a/index.html
+++ b/index.html
@@ -691,6 +691,7 @@
     let shuffledQuestions = [];
     let playerName = '';
     let answered = false;
+    const totalQuestions = shuffledQuestions.length;
 
     function shuffle(array) {
       return array.sort(() => Math.random() - 0.5);
