--- a/index.html
+++ b/index.html
@@ -681,7 +681,72 @@
 { question: "Quantos oceanos existem na Terra?", options: ["3", "4", "5", "6"], answer: "5" },
 { question: "O que é a litosfera?", options: ["Parte líquida da Terra", "Atmosfera superior", "Camada sólida superficial da Terra", "Centro do planeta"], answer: "Camada sólida superficial da Terra" },
 { question: "Quem é conhecido como o Rei do Pop?", options: ["Elvis Presley", "Prince", "Freddie Mercury", "Michael Jackson"], answer: "Michael Jackson" },
-{ question: "Quem é conhecido como o Rei do Pop?", options: ["Elvis Presley", "Prince", "Freddie Mercury", "Michael Jackson"], answer: "Michael Jackson" }
+{ question: "Qual é o maior animal marinho?", options: ['Baleia azul', 'Tubarão branco', 'Orca', 'Golfinho'], answer: "Baleia azul" },
+{ question: "Qual é a capital da Suíça?", options: ['Zurique', 'Genebra', 'Berna', 'Lugano'], answer: "Berna" },
+{ question: "Quantos continentes existem no mundo?", options: ['7', '6', '5', '8'], answer: "7" },
+{ question: "Quem foi o primeiro a desenvolver a teoria da relatividade?", options: ['Albert Einstein', 'Isaac Newton', 'Galileu Galilei', 'Niels Bohr'], answer: "Albert Einstein" },
+{ question: "Qual é o nome do maior rio da América do Sul?", options: ['Amazonas', 'Mississippi', 'Orinoco', 'São Francisco'], answer: "Amazonas" },
+{ question: "Em que cidade está localizada a Torre Eiffel?", options: ['Paris', 'Londres', 'Roma', 'Madrid'], answer: "Paris" },
+{ question: "O que é a Lei de Mendel?", options: ['Lei da hereditariedade', 'Lei da gravidade', 'Lei da termodinâmica', 'Lei da física quântica'], answer: "Lei da hereditariedade" },
+{ question: "Quem é considerado o pai da psicanálise?", options: ['Sigmund Freud', 'Carl Jung', 'Abraham Maslow', 'Alfred Adler'], answer: "Sigmund Freud" },
+{ question: "Qual é o nome do maior oceano do planeta?", options: ['Pacífico', 'Atlântico', 'Índico', 'Ártico'], answer: "Pacífico" },
+{ question: "Quantos jogadores tem um time de futebol em campo?", options: ['11', '10', '12', '9'], answer: "11" },
+{ question: "Qual é a capital do Japão?", options: ['Tóquio', 'Seul', 'Pequim', 'Bangkok'], answer: "Tóquio" },
+{ question: "Em que país se localiza o Machu Picchu?", options: ['Peru', 'México', 'Brasil', 'Chile'], answer: "Peru" },
+{ question: "Quantos ossos tem o corpo humano?", options: ['206', '204', '208', '210'], answer: "206" },
+{ question: "Qual é a fórmula química da água?", options: ['H2O', 'CO2', 'O2', 'NaCl'], answer: "H2O" },
+{ question: "Quem foi o primeiro homem a viajar para o espaço?", options: ['Yuri Gagarin', 'Neil Armstrong', 'Buzz Aldrin', 'Alan Shepard'], answer: "Yuri Gagarin" },
+{ question: "Em que ano foi fundada a Organização das Nações Unidas?", options: ['1945', '1919', '1939', '1955'], answer: "1945" },
+{ question: "Qual é o maior arquipélago do mundo?", options: ['Indonésia', 'Filipinas', 'Havaí', 'Caribe'], answer: "Indonésia" },
+{ question: "Qual é o nome do presidente dos Estados Unidos em 2025?", options: ['Joe Biden', 'Donald Trump', 'Barack Obama', 'George W. Bush'], answer: "Joe Biden" },
+{ question: "Qual é a capital da China?", options: ['Pequim', 'Xangai', 'Hong Kong', 'Macau'], answer: "Pequim" },
+{ question: "Qual é o nome do primeiro satélite artificial lançado?", options: ['Sputnik', 'Explorer', 'Apollo', 'Vanguard'], answer: "Sputnik" },
+{ question: "Qual o país mais populoso do mundo?", options: ['China', 'Índia', 'Estados Unidos', 'Indonésia'], answer: "China" },
+{ question: "Quem inventou a lâmpada elétrica?", options: ['Thomas Edison', 'Nikola Tesla', 'Michael Faraday', 'James Watt'], answer: "Thomas Edison" },
+{ question: "O que significa a sigla Wi-Fi?", options: ['Wireless Fidelity', 'Web Internet Framework', 'World Information Frequency', 'Wireless Functionality'], answer: "Wireless Fidelity" },
+{ question: "Qual a principal função do sistema circulatório?", options: ['Transportar oxigênio e nutrientes', 'Controlar a respiração', 'Regulamentar os hormônios', 'Proteger contra doenças'], answer: "Transportar oxigênio e nutrientes" },
+{ question: "Quem foi o criador da teoria da evolução das espécies?", options: ['Charles Darwin', 'Albert Einstein', 'Isaac Newton', 'Louis Pasteur'], answer: "Charles Darwin" },
+{ question: "Em que continente está o Egito?", options: ['África', 'Ásia', 'América', 'Europa'], answer: "África" },
+{ question: "Qual é a montanha mais alta das Américas?", options: ['Aconcágua', 'Everest', 'Makalu', 'K2'], answer: "Aconcágua" },
+{ question: "Qual é o maior animal marinho?", options: ['Baleia azul', 'Tubarão branco', 'Orca', 'Golfinho'], answer: "Baleia azul" },
+{ question: "Qual é a capital da Suíça?", options: ['Zurique', 'Genebra', 'Berna', 'Lugano'], answer: "Berna" },
+{ question: "Quantos continentes existem no mundo?", options: ['7', '6', '5', '8'], answer: "7" },
+{ question: "Quem foi o primeiro a desenvolver a teoria da relatividade?", options: ['Albert Einstein', 'Isaac Newton', 'Galileu Galilei', 'Niels Bohr'], answer: "Albert Einstein" },
+{ question: "Qual é o nome do maior rio da América do Sul?", options: ['Amazonas', 'Mississippi', 'Orinoco', 'São Francisco'], answer: "Amazonas" },
+{ question: "Em que cidade está localizada a Torre Eiffel?", options: ['Paris', 'Londres', 'Roma', 'Madrid'], answer: "Paris" },
+{ question: "O que é a Lei de Mendel?", options: ['Lei da hereditariedade', 'Lei da gravidade', 'Lei da termodinâmica', 'Lei da física quântica'], answer: "Lei da hereditariedade" },
+{ question: "Quem é considerado o pai da psicanálise?", options: ['Sigmund Freud', 'Carl Jung', 'Abraham Maslow', 'Alfred Adler'], answer: "Sigmund Freud" },
+{ question: "Qual é o nome do maior oceano do planeta?", options: ['Pacífico', 'Atlântico', 'Índico', 'Ártico'], answer: "Pacífico" },
+{ question: "Quantos jogadores tem um time de futebol em campo?", options: ['11', '10', '12', '9'], answer: "11" },
+{ question: "Qual é a capital do Japão?", options: ['Tóquio', 'Seul', 'Pequim', 'Bangkok'], answer: "Tóquio" },
+{ question: "Em que país se localiza o Machu Picchu?", options: ['Peru', 'México', 'Brasil', 'Chile'], answer: "Peru" },
+{ question: "Quantos ossos tem o corpo humano?", options: ['206', '204', '208', '210'], answer: "206" },
+{ question: "Qual é a fórmula química da água?", options: ['H2O', 'CO2', 'O2', 'NaCl'], answer: "H2O" },
+{ question: "Quem foi o primeiro homem a viajar para o espaço?", options: ['Yuri Gagarin', 'Neil Armstrong', 'Buzz Aldrin', 'Alan Shepard'], answer: "Yuri Gagarin" },
+{ question: "Em que ano foi fundada a Organização das Nações Unidas?", options: ['1945', '1919', '1939', '1955'], answer: "1945" },
+{ question: "Qual é o maior arquipélago do mundo?", options: ['Indonésia', 'Filipinas', 'Havaí', 'Caribe'], answer: "Indonésia" },
+{ question: "Qual é o nome do presidente dos Estados Unidos em 2025?", options: ['Joe Biden', 'Donald Trump', 'Barack Obama', 'George W. Bush'], answer: "Joe Biden" },
+{ question: "Qual é a capital da China?", options: ['Pequim', 'Xangai', 'Hong Kong', 'Macau'], answer: "Pequim" },
+{ question: "Qual é o nome do primeiro satélite artificial lançado?", options: ['Sputnik', 'Explorer', 'Apollo', 'Vanguard'], answer: "Sputnik" },
+{ question: "Qual o país mais populoso do mundo?", options: ['China', 'Índia', 'Estados Unidos', 'Indonésia'], answer: "China" },
+{ question: "Quem inventou a lâmpada elétrica?", options: ['Thomas Edison', 'Nikola Tesla', 'Michael Faraday', 'James Watt'], answer: "Thomas Edison" },
+{ question: "O que significa a sigla Wi-Fi?", options: ['Wireless Fidelity', 'Web Internet Framework', 'World Information Frequency', 'Wireless Functionality'], answer: "Wireless Fidelity" },
+{ question: "Em que ano foi lançado o primeiro iPhone?", options: ['2007', '2005', '2008', '2010'], answer: "2007" },
+{ question: "Qual é o nome do maior satélite de Saturno?", options: ['Titã', 'Europa', 'Ganímedes', 'Io'], answer: "Titã" },
+{ question: "Quantos anéis tem o símbolo das Olimpíadas?", options: ['5', '6', '4', '7'], answer: "5" },
+{ question: "Qual a capital da Etiópia?", options: ['Adis Abeba', 'Cartum', 'Kampala', 'Nairóbi'], answer: "Adis Abeba" },
+{ question: "Qual é o país com maior número de ilhas no mundo?", options: ['Suécia', 'Canadá', 'Indonésia', 'Filipinas'], answer: "Suécia" },
+{ question: "Qual compositor é conhecido como 'O Pai da Sinfonia'?", options: ['Joseph Haydn', 'Mozart', 'Beethoven', 'Bach'], answer: "Joseph Haydn" },
+{ question: "Qual planeta do sistema solar gira mais rápido?", options: ['Júpiter', 'Marte', 'Terra', 'Saturno'], answer: "Júpiter" },
+{ question: "Qual foi a primeira mulher a ganhar um Nobel?", options: ['Marie Curie', 'Rosalind Franklin', 'Ada Lovelace', 'Jane Goodall'], answer: "Marie Curie" },
+{ question: "Qual é o maior lago de água doce do mundo em volume?", options: ['Lago Baikal', 'Lago Vitória', 'Lago Superior', 'Lago Tanganica'], answer: "Lago Baikal" },
+{ question: "Quantos pares de costelas tem o corpo humano?", options: ['12', '10', '11', '13'], answer: "12" },
+{ question: "Qual é o nome do processo de divisão celular?", options: ['Mitose', 'Meiose', 'Fagocitose', 'Anáfase'], answer: "Mitose" },
+{ question: "Qual país é famoso pelos templos de Angkor?", options: ['Camboja', 'Tailândia', 'Vietnã', 'Laos'], answer: "Camboja" },
+{ question: "O que é a 'Bossa Nova'?", options: ['Estilo musical', 'Tipo de dança', 'Obra literária', 'Gênero de pintura'], answer: "Estilo musical" },
+{ question: "Qual animal representa o signo de Capricórnio?", options: ['Cabra', 'Peixe', 'Búfalo', 'Carneiro'], answer: "Cabra" },
+{ question: "O que mede um sismógrafo?", options: ['Terremotos', 'Temperatura', 'Altura', 'Corrente elétrica'], answer: "Terremotos" }
+
 
 
     ];
